Bug 215522 - OfflineAudioContext.destination has incorrect number of channels & channel count mode
Summary: OfflineAudioContext.destination has incorrect number of channels & channel co...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Audio (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks: 212611
  Show dependency treegraph
 
Reported: 2020-08-14 14:18 PDT by Chris Dumez
Modified: 2020-08-14 15:55 PDT (History)
10 users (show)

See Also:


Attachments
Patch (96.37 KB, patch)
2020-08-14 14:23 PDT, Chris Dumez
no flags Details | Formatted Diff | Diff
Patch (98.01 KB, patch)
2020-08-14 15:25 PDT, Chris Dumez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2020-08-14 14:18:41 PDT
OfflineAudioContext.destination currently always has a number of channels that is 0, no matter the numberOfChannels provided when constructing the OfflineAudioContext. The channel count mode is also "max" instead of "explicit".
Comment 1 Chris Dumez 2020-08-14 14:23:56 PDT
Created attachment 406620 [details]
Patch
Comment 2 Chris Dumez 2020-08-14 15:25:52 PDT
Created attachment 406627 [details]
Patch
Comment 3 EWS 2020-08-14 15:54:13 PDT
Committed r265713: <https://trac.webkit.org/changeset/265713>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 406627 [details].
Comment 4 Radar WebKit Bug Importer 2020-08-14 15:55:19 PDT
<rdar://problem/67103681>