OfflineAudioContext.destination has incorrect number of channels & channel count mode https://bugs.webkit.org/show_bug.cgi?id=215522

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.
Note that some tests are now failing when checking the audio channels on the OfflineAudioContext's destination.
Previously, there were no such channels to check since the channel count was always 0.

* web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/sub-sample-scheduling-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-biquad-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-constant-source-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-delay-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-gain-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-oscillator-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-panner-connections-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-panner-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/convolver-response-2-chan-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-gainnode-interface/gain-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-offlineaudiocontext-interface/ctor-offlineaudiocontext-expected.txt:

Source/WebCore:

OfflineAudioContext.destination currently always has a number of channels that is 0, no
matter the numberOfChannels provided when constructing the OfflineAudioContext. The
channel count mode is also "max" instead of "explicit" (as per [1]).

[1] https://www.w3.org/TR/webaudio/#AudioDestinationNode

No new tests, rebaselined existing tests.

* Modules/webaudio/OfflineAudioDestinationNode.cpp:
(WebCore::OfflineAudioDestinationNode::OfflineAudioDestinationNode):
(WebCore::OfflineAudioDestinationNode::maxChannelCount const):
* Modules/webaudio/OfflineAudioDestinationNode.h:


Canonical link: https://commits.webkit.org/228296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265713 268f45cc-cd09-0410-ab3c-d52691b4dbfc